[package]
name = "asciidoctor-web"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Asciidoctor.js bindings for Rust"
license = "Apache-2.0"
categories = ["external-ffi-bindings", "text-processing", "wasm", "web-programming"]
keywords = ["asciidoc", "asciidoctor", "wasm", "yew"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
serde-wasm-bindgen = "0.4.5"

yew = { version = "0.20", optional = true }
